Changed cody image location to local

--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ h2 {
 .portfolioItem1 {
     width: calc(85% + 40px);
     height: 300px;
-    background-image: url(https://lh3.googleusercontent.com/XgDyNEiwOaIJh9t18QI9kqoEb8ik8yKbagSwLPdIdS1Lj7NZYC3bukR3mADFp3EE2RvYQuzAR9aRzyRoKdIvbtxNCC_-dULBTnMIq4rjrG3JH5WtgV4m8zjIo6IV0h-OmtRVI8YlfC1_b8qNTHH0AHKxHr7x_TghK-qFPXf32i8_EfKeBtAqZ_NoQIsTSDe9oiYXjtUOcQUxQUwK4CXT1jSDSHhQmUga3l_WRXmiU1bnBHX4fE4li5b9Pyg4todcR6045FJOjal5krHnK5RXRo0ZGa1B8aUNU8RhRExx4-7gtYr3Imf_5wNoSF_kVvvQ7JSDLvFWmmn336VwlTp78JT-RF5zcRmixkpqdo7ngj8py6jvaNLfmvPcC3R8VvEavTBjwXx_pwwiQsm7ZDhNwyIk_SXlrlhcw1Poz8FuvgwbKD8QJ6dAGJElsF8tjGq82wxJy-c5qmF-R2Y9ELUF9CO-B7Qq9N2uMuRS8Cd0RCo-aBooIhjKVTLTpw2YrLgRNfo7iOzuDyWs-jkovUQBj-nU82mF6uwZcGPgHh7XK9TZJMZQ5ctJSCjzC-7w59Jj8y4uHnoWvR6Mw1HsxE4tAZuKA-uSXym3lAucwUXqDDissyljiIuoih5_Wwz6URThjZ1fJu-Z71-Ic3gbyvC-jvc1BcyoJDOAynmZ2uQo8AJtfUF7GycNAvJl_HLrVyGKtcQ--05QR68spm01W-dcnQ__G8b1f5bVrq2htan1JxBINw_GxN1enk9s8w=w751-h1001-no?authuser=0);
+    background-image: url(CodyPic.jpeg);
     background-position: center;
 }
 
